# Alou-DAO

./: .env.example  .gitignore  .solhint.json  ARCHITECTURE.md  DIAP_README.md  POST_DEPLOY_CHECKLIST.md  README.md  SEPOLIA_DEPLOYMENT_SUMMARY.txt  TOKEN_METADATA_SUMMARY.md  hardhat.config.js  package-lock.json  package.json  token-metadata.json
.states/vm-prague/: state.json
cache/: solidity-files-cache.json
contracts/: DIAPAgentNetwork.sol  DIAPGovernance.sol  DIAPPayment.sol  DIAPPaymentChannel.sol  DIAPPaymentCore.sol  DIAPPaymentPrivacy.sol  DIAPSubscription.sol  DIAPToken.sol  DIAPVerification.sol  ERC1967Proxy.sol  IZKPVerifier.sol
contracts/aa/: BaseAccount.sol  DIAPAccount.sol  DIAPAccountFactory.sol  DIAPPaymaster.sol  IERC1271.sol  IEntryPoint.sol
docs/: DEPLOYMENT_ADDRESSES_SEPOLIA.md  DEPLOYMENT_GUIDE.md  DIAP_README.md  EMERGENCY_KIT.md  ERC4337-Integration.md  FINAL_RISK_ASSESSMENT.md  GAS_OPTIMIZATION_COMPLETE.md  GAS_OPTIMIZATION_SUMMARY.md  Gas-Optimization.md  MULTISIG_SETUP_GUIDE.md  OPERATIONS_GUIDE.md  PUSH_INSTRUCTIONS.md  RISK_CONTROL_SUMMARY.md  SECURITY_AUDIT_REPORT.md  Security-Audit.md  TELEGRAM_BOT_SETUP.md  TENDERLY_SETUP_GUIDE.md  TOKEN_ALLOCATION.md
emergency/: README.md  contract_addresses.txt  emergency_contacts.txt
scripts/: check_deployment_gas.js  check_env.js  deploy-aa.js  deploy_diap.js  deploy_diap_full.js  deploy_full_to_testnet.js  deploy_governance.js  deploy_payment_privacy.js  deploy_to_testnet.js  diagnose_env.js  security_check.js  test_all_rpc_nodes.js  test_contract_functions.js  test_hardhat_sepolia.js  test_rpc.js  test_sepolia_rpc.js  verify_allocation.js
solana-contracts/: Anchor.toml  CARGO_TOML_TEMPLATE.toml  Cargo.toml  DEPLOYMENT_GUIDE.md  PROJECT_STATUS.md  README.md
solana-contracts/programs/diap-agent-network/: Cargo.toml
solana-contracts/programs/diap-agent-network/src/: lib.rs
solana-contracts/programs/diap-governance/: Cargo.toml
solana-contracts/programs/diap-governance/src/: lib.rs
solana-contracts/programs/diap-payment-channel/: Cargo.toml
solana-contracts/programs/diap-payment-channel/src/: lib.rs
solana-contracts/programs/diap-payment-core/: Cargo.toml
solana-contracts/programs/diap-payment-core/src/: lib.rs
solana-contracts/programs/diap-payment-privacy/: Cargo.toml
solana-contracts/programs/diap-payment-privacy/src/: lib.rs
solana-contracts/programs/diap-subscription/: Cargo.toml
solana-contracts/programs/diap-subscription/src/: lib.rs
solana-contracts/programs/diap-token/: Cargo.toml
solana-contracts/programs/diap-token/src/: lib.rs
solana-contracts/programs/diap-verification/: Cargo.toml
solana-contracts/programs/diap-verification/src/: lib.rs
tests/: DIAPAccount.test.js  DIAPNetwork_IPNS.test.js  DIAPNetwork_IPNS_test.sol  DIAPNetwork_test.sol  DIAPSimple_test.sol  DIAPToken_.test.js  DIAPToken_RewardPool.test.js  DIAPVerification.test.js  IPNS_TEST_README.md
(+44 files in other folders)
