[package]
name = "diap-agent-network"
version = "0.1.0"
description = "DIAP Agent Network - Smart Agent Management System"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "diap_agent_network"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
solana-program = "1.18.0"
