[package]
name = "diap-payment-privacy"
version = "0.1.0"
description = "DIAP Payment Privacy - ZKP-based Privacy"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "diap_payment_privacy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solana-program = "1.18.0"
